Add Notebook link for further learning

--- a/IntroPython.ipynb
+++ b/IntroPython.ipynb
@@ -6,7 +6,7 @@
       "name": "IntroPython.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNLIXLQhqviY7DnU9YLr97a",
+      "authorship_tag": "ABX9TyMxppm6H++zggns9gVN8Vpc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1325,7 +1325,7 @@
         "id": "BvtucqmzRMOi",
         "outputId": "1c0a5638-b459-4aa5-cc36-413ed1d9b0ac"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1367,7 +1367,7 @@
         "id": "10_DmWOfRmC8",
         "outputId": "abe23db5-480b-4102-94d3-891d5b90a643"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1399,7 +1399,7 @@
         "id": "yELnAjxLR_fy",
         "outputId": "32d94060-f2eb-4a7c-8af6-8ace1fa1a093"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1444,7 +1444,7 @@
           "height": 265
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1488,7 +1488,7 @@
           "height": 295
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1539,7 +1539,7 @@
           "height": 281
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1588,7 +1588,7 @@
           "height": 407
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1629,7 +1629,7 @@
       "metadata": {
         "id": "XiFZ0MFVGKvY"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1651,7 +1651,7 @@
           "height": 270
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1852,7 +1852,7 @@
           "height": 741
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2232,7 +2232,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2258,7 +2258,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2295,7 +2295,7 @@
           "height": 300
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2494,7 +2494,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2524,7 +2524,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2554,7 +2554,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2584,7 +2584,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2613,7 +2613,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2642,7 +2642,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2670,7 +2670,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2711,7 +2711,7 @@
       "metadata": {
         "id": "pFTQ1NeXLye8"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2729,7 +2729,7 @@
           "height": 265
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2761,7 +2761,7 @@
           "height": 281
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2792,7 +2792,7 @@
           "height": 303
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2821,7 +2821,7 @@
           "height": 317
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2851,7 +2851,7 @@
           "height": 266
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2885,7 +2885,7 @@
           "height": 414
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2944,7 +2944,7 @@
           "height": 507
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2988,7 +2988,7 @@
           "height": 507
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3033,7 +3033,7 @@
           "height": 483
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3100,7 +3100,7 @@
           "height": 477
         }
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3115,6 +3115,16 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Further learning from Carlos's Notebooks\n",
+        "[On GitHub](https://github.com/clizarraga-UAD7/Notebooks)"
+      ],
+      "metadata": {
+        "id": "FeDMBKdTbBOV"
+      }
     }
   ]
 }
